[package]
name = "test_insta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
insta = { version = "1.39.0", features = ["yaml", "redactions"] }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
