[package]
name = "test_rand"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", features = ["min_const_gen"] }
rand_chacha = "0.3.1"
rand_seeder = "0.3.0"
rand_pcg = "0.3.1"
